--- a/resources/lang/kh.json
+++ b/resources/lang/kh.json
@@ -320,11 +320,13 @@
     "Go" : "ទៅ",
     "New Arrivals" : "មកដល់ថ្មីៗ",
     "View More" : "មើលច្រើនទៀត",
+    "View photos" : "មើលរូបថត",
     "Search by: Title..." : "ស្វែងរកដោយ៖ ចំណងជើង...",
     "Detail Buy Seller" : "ព័ត៌មានលម្អិត អ្នកលក់",
     "ALSO AVAILABLE FROM" : "អាចរកបានពី",
     "Share this book" : "ចែកសៀវភៅនេះ",
     "Read" : "អាន",
+    "Read More" : "អានបន្ថែម",
     "Download" : "ទាញយក",
     "Buy" : "ទិញ",
     "Related Books" : "សៀវភៅដែលពាក់ព័ន្ធ",
